Company Profiles Updates

--- a/companies/fate.html
+++ b/companies/fate.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Fate Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Fate Therapeutics in iPSC and cell therapies">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -80,7 +86,7 @@
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
                                    Fate is the original company to develop induced Pluripotent Stem Cells. They have been leading 
-                                   the space for many years. The biggest issue with being first is the science often moves faster 
+                                   the space for many years. The biggest issue with being first is that science often moves faster 
                                    than the clinical trials. It did not take long to realize these early therapies were already outdated. 
                                    They did not have key edits to avoid immune rejection of the cells. I think Fate did the right 
                                    thing with scrapping all these older programs to move new programs into the clinic which have these 
@@ -91,18 +97,12 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   FT-576 BCMA<progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   FT-819 CD19 <progress class="progress-bar" value="10" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   Next Gen Therapies<progress class="progress-bar" value="10" max="100"></progress>
-                                   IND Enabling
+                                   I have been following Fate and Scott Wolchko for a few years now. He seems like a good CEO, but 
+                                   they have had many setbacks in their development programs. First they dropped ProTmune and NK-100. 
+                                   Now they had to reset and drop all their phase 1 NK programs to start over. I used to think he was a 
+                                   powerful CEO, but now I have my doubts. I have been waiting for years for this investment to bear fruit.
                               </p>
                          </section> 
                          
@@ -111,7 +111,7 @@
                               <p class="profiles">
                                    FT-576 is a CAR-NK cell therapy using a BCMA target. It has the enhanced CD16 receptor for improved use 
                                    with antibody therapies. It has the CD38 knockout so it can be combined with anti-CD38 antibodies for 
-                                   Multiple Myeloma. This program is just entering phase 1, but data could help inform us to how well this combination 
+                                   Multiple Myeloma. This program is just entering phase 1, but data could help inform us on how well this combination 
                                    could work in Multiple Myeloma. 
                               </p>
                               <p class="profiles">
@@ -128,15 +128,15 @@
                                    Cash $475 million
                               </p>
                               <p class="profiles">
-                                   FT-576 is for Multiple Myeloma which affects over 30,000 patient in the US alone. This will compete with other
-                                   BCMA cell therapies. It would have to distinguish itself from the many other programs in this indications. I think 
-                                   with the edits and combinations it has, it really could. I would give this $1 billion potentail if it works out well.
+                                   FT-576 is for Multiple Myeloma which affects over 30,000 patients in the US alone. This will compete with other
+                                   BCMA cell therapies. It would have to distinguish itself from the many other programs in this indication. I think 
+                                   with the edits and combinations it has, it really could. I would give this $1 billion potential if it works out well.
                                    It gets a .1 multiplier for having no data yet. That is $100 million in value.
                               </p>
                               <p class="profiles">
                                    FT-819 is their CD19 CAR-T for Lymphoma. This does not have the immune evasion edits. I don't think this program 
                                    will go beyond phase 1 to validate the concept of making iPSC derived T cells. I think they will eventually replace 
-                                   this will CAR-T therapies with more edits.
+                                   this with CAR-T therapies with more edits.
                               </p>
                               <p class="profiles">
                                    All in, that is a $575 million market cap. Based on the 97 million shares outstanding, that comes to $5.92.
@@ -152,7 +152,7 @@
                                    FT-819 Phase 1 Ongoing
                               </p>
                               <p class="profiles">
-                                   Next Gen therapies will see firt IND in mid 2023
+                                   Next Gen therapies will see first IND in mid 2023
                               </p>
                          </section> 
 
