--- a/companies/ginkgo.html
+++ b/companies/ginkgo.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Page Title -->
           <title>Ginkgo Bioworks Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Gingko Bioworks in Synthetic Biology">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -80,7 +86,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
-                                   Ginkgo is a Commercial Research Orgainzation that is the leader in Synthetic Biology.
+                                   Ginkgo is a Commercial Research Organization that is the leader in Synthetic Biology.
                                    They are driving down cost by driving up a level of scale that is commercially beneficial to customers. 
                                    They are focused on 2 key franchises with synthetic
                                    biology and biosecurity. The foundry and codebase make up their synthetic biology platform. Synthetic Biology 
@@ -93,10 +99,13 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                              Ginkgo Doesn't have a pipeline. They develop programs for other companies through pay for work and 
-                              downstream value.
+                                   I have been following Ginkgo and Jason Kelly since they went public. I know a lot of people find him 
+                                   to be smug and arrogant. I used to defend him as passionate, but I have recently backed off after 
+                                   watching the top 3 management members in this company sell tens of millions of shares in the last few 
+                                   months. I suspect most of it is for tax purposes. I have now become a skeptic until proven otherwise 
+                                   with this management team.
                               </p>
                          </section> 
                          
@@ -116,7 +125,7 @@
                                    Biosecurity is about protecting this new world of biology from pathogens that can harm us. This is about tracking 
                                    and preventing pandemics. We live in a world where we have the tools for bad people to create a pathogen that could
                                    wipe out the entire world. We need to have the tools to be able to detect, track, contain and prevent these types 
-                                   of events. Pathogens do not respect borders which makes this is a global threat. The biosecurity franchise is all
+                                   of events. Pathogens do not respect borders which makes them a global threat. The biosecurity franchise is all
                                    about building the tools to test and the 
                                    software to track and model outbreaks.
                               </p>
