Company Profile Updates

--- a/companies/intellia.html
+++ b/companies/intellia.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Title Page -->
           <title>Intellia Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile of Intellia Therapeutics in Gene Editing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheet -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -82,33 +88,20 @@
                               <p class="profiles">
                                    Intellia is one of the original CRISPR CAS9 companies. They use the original CAS9 enzyme to do gene editing.
                                    Due to the possible risks of using a double stranded break in a person, they have focused on using the technology 
-                                   for editing cells outside of humans like stem cell and T cell therapies. They also proved safety and efficacy of
+                                   for editing cells outside of humans like stem cell and T cell therapies. They also proved safety and efficacy
                                    in human gene knockout. They are also working on building their own versions of base editing and possibly 
                                    gene writing from their acquisition of Rewrite.
                               </p>
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   NTLA-2001 ATTR<progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   NTLA-2002 HAE<progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   NTLA-3001 AATD<progress class="progress-bar" value="10" max="100"></progress>
-                                   IND Enabling Studies
-                              </p>
-                              <p class="profiles">
-                                   NTLA-2003 AATD<progress class="progress-bar" value="10" max="100"></progress>
-                                   IND Enabling Studies
-                              </p>
-                              <p class="profiles">
-                                   NTLA-6001 CD30<progress class="progress-bar" value="5" max="100"></progress>
-                                   IND Enabling Studies
+                                   John Leonard has only been the CEO for a short time, but I think he has done a great job. He really 
+                                   turned this company around which got me to sell out of CRISPR Therapeutics and move into Intellia. He 
+                                   bought Recode which gives them technology toward second generation editors. He has done a good job at 
+                                   managing the cash with a strong balance sheet. They are generating good early clinical data and started 
+                                   working toward US IND filings. 
                               </p>
                          </section> 
                          
@@ -120,7 +113,7 @@
                                    the unwanted ATTR protein in serum.  
                               </p>
                               <p class="profiles">
-                                   NTLA-2002 is their second therapy targeting the Kallikrein gene for knock out. The historical data from HAE 
+                                   NTLA-2002 is their second therapy targeting the Kallikrein gene for knockout. The historical data from HAE 
                                    shows that the knock down of Kallikrein in the plasma can reduce the attacks from HAE. This program is in phase 1
                                    and they have some initial data showing up to 92% reduction in Kallikrein. They also showed an attack free 
                                    event time improvement.
@@ -131,8 +124,8 @@
                                    could go wrong with this program. I expect it to fail and be discontinued for NTLA-2003.
                               </p>
                               <p class="profiles">
-                                   NTLA-2003 is their therapy for AAT where they attempt to knockout the SERPINA1 gene. I suspect this would 
-                                   work very much like RNAi knockout programs for this target, but in a permanent manor. I find this program 
+                                   NTLA-2003 is their therapy for AAT where they attempt to knock out the SERPINA1 gene. I suspect this would 
+                                   work very much like RNAi knockout programs for this target, but in a permanent manner. I find this program 
                                    safer than the NTLA-3001 approach. It would compete with RNAi in a competitive space though.
                               </p>
                               <p class="profiles">
@@ -150,7 +143,7 @@
                               </p>
                               <p class="profiles">
                                    NTLA-2001 is shared 75% Intellia and 25% Regeneron. Their first program is for hATTR. This is about
-                                   50,000 world wide. I think they could do about 2,000 per year for at least
+                                   50,000 worldwide. I think they could do about 2,000 per year for at least
                                    $2 million price as RNAi alternatives cost nearly $600,000 per year. I could see at least up to
                                    $4 billion sales. That would entitle Intellia to $3 billion in sales. With good phase 1 data, I would 
                                    put this multiple at .5 right now. That makes it worth $1.5 billion value.
@@ -165,9 +158,9 @@
                               </p>
                               <p class="profiles">
                                    NTLA-2003 is their gene knockout for AATD. There are estimated to be about 60,000 AATD patients 
-                                   in the US. I think they could capture a few thousand of them for $2 million price. That could make 
-                                   this program worth $2 billion or more in revenues. I would put a .1 multiplier on that for precilinical.
-                                   That makes it worth $200 million value.
+                                   in the US. I think they could capture a few thousand of them for a $2 million price. That could make 
+                                   this program worth $2 billion or more in revenues. I would put a .1 multiplier on that for preclinical.
+                                   That makes it worth $200 million.
                               </p>
                               <p class="profiles">
                                    NTLA-6001 is a CAR-T therapy for Lymphoma. I don't think I will give this program any value at all.
