--- a/companies/invitae.html
+++ b/companies/invitae.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Title Page -->
           <title>Invitae Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Invitae in Gene Sequencing">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -81,9 +87,8 @@
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
                                    Invitae is a company that does genetic testing using kits. They test for things like Cancer 
-                                   Genetics, Rare Genetic Disease and Women's Healthy. They generate over 3 million samples per year and
-                                   continue to grow. 
-                                   This makes them like the Google of Genomics information. They allow patient to share their information
+                                   Genetics, Rare Genetic Disease and Women's Health. They generate over 3 million samples per year and
+                                   continue to grow. This makes them like the Google of Genomics information. They allow patients to share their information
                                    which can lead to patients getting matched with doctors or scientists who are doing clinical trials
                                    that might apply to them. This can provide powerful population level genetics to scientists and 
                                    researchers alike who are doing research on these diseases.
@@ -93,7 +98,9 @@
                          <section class="section-container">
                               <h2 class="list-header">Pipeline</h2>
                               <p class="profiles">
-                                   They have multiple Tests for Different Genomics applications in Clinical Development.
+                                   They just replaced their CEO last year with Ken Knight. So far I like his strategy to cut costs and 
+                                   focus on growing the company in key markets. They have a lot of debt so he has a huge challenge ahead 
+                                   of him. I will take time to know if he can turn this company around.
                               </p>
                               
                          </section> 
@@ -101,19 +108,20 @@
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                              The Oncology space of genetic test is expected to grow to over $30 billion a year market size. There is a huge 
-                              genetics market for oncology as ever tumor for every patient is unique. There is a need for multiple tests 
-                              per patient throughout their course of treatement. There is a high level of relpase rates in cancer which 
-                              will drive continued testing. The more we understand oncology the more important the need for genetics profiling 
-                              of tumors becomes. This space will only continue to grow as personalized cancer treatments become more popular.
-                              One of the major current drivers of oncology is the Minimal Residual Detection (MRD) of cancer.
+                                   The Oncology space of genetic testing is expected to grow to over $30 billion a year market size. There 
+                                   is a huge genetics market for oncology as every tumor for every patient is unique. There is a need for 
+                                   multiple tests per patient throughout their course of treatment. There is a high level of relapse rates 
+                                   in cancer which will drive continued testing. The more we understand oncology the more important the 
+                                   need for genetic profiling of tumors becomes. This space will only continue to grow as personalized 
+                                   cancer treatments become more popular. One of the major current drivers of oncology is the Minimal 
+                                   Residual Detection (MRD) of cancer.
                               </p>
                               <p class="profiles">
-                                   Its is estiamted that the Women's health space is about $2.5 billion market. Its in not the reason I would 
-                                   own this company or any other testing company. The key focus in on oncology.
+                                   It’s estimated that the Women's health space is about a $2.5 billion market. It's not the reason I 
+                                   would own this company or any other testing company. The key focus in on oncology.
                               </p>
                               <p class="profiles">
-                                   The rare Disease market is one of the primary needs for genetic testing, but its not even 
+                                   The rare Disease market is one of the primary needs for genetic testing, but it's not even 
                                    remotely as big as the oncology market. 
                               </p>
                          </section>  
@@ -125,14 +133,14 @@
                               </p>
                               <p class="profiles">
                                    They have reached a run rate of $516 million a year in sales with strong ongoing growth. At 5x sales 
-                                   for a typical price to sales for biotech companies, that comes to $2.5 bilion in valuation based on current
+                                   for a typical price to sales for biotech companies, that comes to $2.5 billion in valuation based on current
                                    sales.
                               </p>
                               <p class="profiles">
                                    They have about $1.7 billion in debt. That is a negative to the valuation and has to be deducted.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $1.35 billion market cap. Based on the 243 millon shares outstanding, that comes to $5.55. 
+                                   All in, that is a $1.35 billion market cap. Based on the 243 million shares outstanding, that comes to $5.55. 
                               </p>
                          </section>  
 
