--- a/companies/ipsc.html
+++ b/companies/ipsc.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Title Page -->
           <title>Cnetury Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Century Therapeutics in iPSC and cell therapies">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -93,18 +99,11 @@
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   CNTY-101 CD19 iNK <progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   CNTY-102 CD19/CD79 iT <progress class="progress-bar" value="10" max="100"></progress>
-                                   Preclinical
-                              </p>
-                              <p class="profiles">
-                                   CNTY-107 Nectin4 <progress class="progress-bar" value="5" max="100"></progress>
-                                   Preclinical
+                                   I have only followed Century since their IPO. I have been cautious with Lalo Flores as he doesn’t come 
+                                   across as a very strong presenter at conferences. He has impressed me with the science and the way they 
+                                   are developing the technology. It will take time to know as they are just starting clinical trials.
                               </p>
                          </section> 
                          
