--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -12,13 +12,19 @@
           gtag('config', 'G-39ZHJP00WP');
           </script>
 
+          <!-- Title Page -->
           <title>Kymera Therapeutics Profile</title>
 
+          <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Profile for Kymera Therapeutics in Targeted Protein Degraders">
           <meta name="author" content="CoderKid2k">
+
+          <!-- Favicon -->
           <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
+          <!-- Style Sheets -->
           <link rel="stylesheet" href="../styles/header.css">
           <link rel="stylesheet" href="../styles/main.css">
           <link rel="stylesheet" href="../styles/footer.css">
@@ -83,29 +89,18 @@
                                    the Proteasome. This acts like the recycling center of the cell for proteins. When a protein is no 
                                    longer needed, it gets tagged for degradation. Then it is loaded into the Proteasome where it gets
                                    broken down into small fragments that can be used to make new proteins. The targeted protein degraders
-                                   go into the cell and tag proteins to have them degraded by the Proteasome. This can harnesses the cell
+                                   go into the cell and tag proteins to have them degraded by the Proteasome. This can harness the cell
                                    system to create a therapeutic way of removing harmful or unwanted proteins as therapies. Kymera is focused 
                                    on using this technology to treat inflammation disorders and cancer. 
                               </p>
                          </section>  
 
                          <section class="section-container">
-                              <h2 class="list-header">Pipeline</h2>
+                              <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   KT-474 IRAK4<progress class="progress-bar" value="25" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   KT-413 IRAK4/IMID<progress class="progress-bar" value="15" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   KT-333 STAT3<progress class="progress-bar" value="10" max="100"></progress>
-                                   Phase 1
-                              </p>
-                              <p class="profiles">
-                                   KT-253 MDM2<progress class="progress-bar" value="5" max="100"></progress>
-                                   IND Enabling Studies
+                                   I have been following Kymera and Nello Mainolfi for a while now. So far, he seems to be doing great. 
+                                   The company is maintaining a good balance sheet while advancing its early clinical trials. It will take 
+                                   time for the data to mature to see which programs will be successful.
                               </p>
                          </section> 
                          
@@ -125,11 +120,11 @@
                               </p>
                               <p class="profiles">
                                    KT-333 inhibits the STAT3 pathway by targeting that protein for degradation. This is being developed for fibrotic 
-                                   diseases and oncology. It is just entering phase 1 for oncology targets and still in preclinic for fibrotic diseases.
+                                   diseases and oncology. It is just entering phase 1 for oncology targets and still in preclinical for fibrotic diseases.
                                    We will have to wait and see how the data works out.
                               </p>
                               <p class="profiles">
-                                   KT-253 targets MDM2 which is a protein that inhbits p53. The p53 protein is a key regulator of cell survival and 
+                                   KT-253 targets MDM2 which is a protein that inhibits p53. The p53 protein is a key regulator of cell survival and 
                                    DNA repair. The p53 gene is mutated in about 50% of cancers. This leads to a loss of this tumor suppressor gene. By 
                                    blocking the inhibitor of p53, they can have higher level of the p53 protein in these cells. This is designed 
                                    to increase the level of cell death signals in cancer cells. It is currently in IND enabling studies. 
@@ -142,23 +137,23 @@
                                    Cash $560 million
                               </p>
                               <p class="profiles">
-                                   KT-474 has serveral indications in which it can show efficacy. Just based on the 2 indications 
+                                   KT-474 has several indications in which it can show efficacy. Just based on the 2 indications 
                                    it showed data on in phase 1, I think it could easily do $1 billion in sales if the data continues 
                                    to do well or improves. There are even more indications in which it could be successful. I would give
-                                   this and 1x multipier as they do have full phase 1 data now. That gives them $1 billion in value. 
+                                   this and 1x multiplier as they do have full phase 1 data now. That gives them $1 billion in value. 
                               </p>
                               <p class="profiles">
                                    KT-413 has a few smaller indications for B cell lymphomas where it would target MyD88 driven cancers. I think 
                                    it could do about $500 million in sales if successful. It would get a .1 multiplier until we see some data from 
-                                   the phase 1 trial. That makes it worth $50 million value.
+                                   the phase 1 trial. That makes it worth $50.
                               </p>
                               <p class="profiles">
                                    KT-333 could have really big potential if it works out well in Fibrotic disease and oncology. I would venture 
-                                   a guess of $2 billion in sales. It would depend on the data. I would give this .1 multiplier since its still early 
-                                   in phase 1 with no data. That makes it worth $200 million value.
+                                   a guess of $2 billion in sales. It would depend on the data. I would give this .1 multiplier since it's still early 
+                                   in phase 1 with no data. That makes it worth $200 million.
                               </p>
                               <p class="profiles">
-                                   KT-253 is really hard to predict since don't have any data on this program yet. I would venture a guess of $1 billion 
+                                   KT-253 is really hard to predict since I don't have any data on this program yet. I would venture a guess of $1 billion 
                                    if all goes well. That would be worth $100 million value with being preclinical.
                               </p>
                               <p class="profiles">
